fixed capitlization in yaml file and added readme file

--- a/Day 1/basic_pod.yaml
+++ b/Day 1/basic_pod.yaml
@@ -13,13 +13,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: Flask_webapp-pod
+  name: flask-webapp-pod
   labels:
-    app: Flask_webapp
+    app: flask-webapp
     
 spec:
   containers:
-  - name: Flask_webapp-container
+  - name: flask-webapp-container
     image: stevendev/flask_demo
     ports:
       - containerPort: 80
